# morphic

./: .gitattributes  .metadata  .pubignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.dart_tool/: package_config.json
assets/: README.md
cold-start/: FRICTION_LOG_TEMPLATE.md  README.md  SUCCESS_METRICS.md  TESTER_GUIDE.md
doc/: CLI.md  CONCEPTS.md  DEVELOPMENT.md  MIGRATION.md  QUICKSTART.md  RUNTIME_MODES.md  SDK.md
example/: README.md  pubspec.yaml
example/lib/: ecology_launcher.dart  editor_pane.dart  forensic.dart  inspector_content.dart  main.dart  material_recipe.dart  morphic_db.dart  navbar_surface.dart  overlay_content.dart  plane_dimmable.dart  secondary_main.dart  tool_palette_content.dart  workspace_content.dart
example/lib/habitat_app/: habitat_app.dart  memory_echoes.dart  presence_field.dart
example/lib/morphic_app/: morphic_spatial_theme.dart  morphic_window_shape.dart
example/lib/notes_app/: notes_command_palette.dart  notes_inspector.dart  notes_session.dart
example/lib/spatial_home_app/: home_rooms.dart  home_test_controls.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc
example/windows/runner/: CMakeLists.txt  Runner.rc  experiment_config.cpp  experiment_config.h  forensic_trace.cpp  resource_counters.cpp  resource_counters.h  surface_lifecycle_relay.cpp  surface_model.h  teardown_state.h
examples/notes_workspace/: .metadata  README.md  pubspec.yaml
examples/notes_workspace/lib/: main.dart  store.dart  surfaces.dart
examples/notes_workspace/test/: widget_test.dart
legacy/example_lib/: morphic_studio.dart
legacy/lib_src/: morphic_controller.dart  morphic_method_channel.dart
legacy/lib_src/core/: surface_group.dart
lib/src/: ecology_controller.dart  morphic_app.dart  run_morphic_app.dart
lib/src/licensing/: api_client.dart  login_flow.dart  spatial_delivery.dart
public-checkout/: .gitattributes  .pubignore  pubspec.yaml
public-checkout/cold-start/: OBSERVER_SCRIPT.md  RESULTS_SUMMARY_TEMPLATE.md
public-checkout/doc/: INTEGRATION.md  QUICKSTART.md  SDK.md
public-checkout/example/lib/: ecology_launcher.dart  editor_pane.dart  editor_surface.dart  forensic.dart  main.dart  material_recipe.dart  overlay_content.dart  tool_palette_content.dart  workspace_content.dart
public-checkout/example/test/: widget_test.dart
public-checkout/examples/notes_workspace/: README.md
public-checkout/legacy/: README.md  morphic_test.dart  plugin_integration_test.dart
public-checkout/legacy/lib_src/: morphic_platform_interface.dart
public-checkout/lib/: morphic.dart
public-checkout/lib/src/: app_bus.dart  morphic_app.dart  morphic_surface.dart  run_morphic_app.dart  surface_spec.dart
public-checkout/runtime_assets/: manifest_spatial.json
public-checkout/runtime_assets/windows/: runner_main_morphic.cpp
public-checkout/test/integrator/: helpers.dart
public-checkout/tools/: seed_notes.json
public-checkout/windows/: CMakeLists.txt  morphic_extension.cpp  morphic_plugin.h
public-checkout/windows/include/morphic/: morphic_plugin_c_api.h
public-checkout/windows/src/api/: diagnostics_channel.cpp  diagnostics_channel.h  runtime_bootstrap.h  session_channel.cpp  session_channel.h  validation_runtime.cpp  workspace_channel.cpp
public-checkout/windows/src/composition/: adaptive_orchestration.h  composition_clock.h  compositor.cpp  compositor.h  session_continuity.h  workspace_mode.h  workspace_snapshot.h
public-checkout/windows/src/core/: composition_surface.h  interaction_phase.h  runtime_capabilities.h  runtime_commit_scheduler.cpp  runtime_pressure.h  runtime_scene_state.cpp  runtime_scene_state.h  runtime_transaction.h  scene_graph.h  surface_presence.h  surface_registry.cpp  surface_role.h  topology_manager.cpp  visual_node.h  win32_surface_realizer.cpp  win32_surface_realizer.h  window_host.cpp  window_host.h
public-checkout/windows/src/debug/: debug_overlay.h  metrics_collector.h  render_skew_tracker.h  runtime_diagnostics.h  thread_activity_auditor.h
public-checkout/windows/src/display/: display_manager.h
public-checkout/windows/src/interaction/: activation_manager.h  capture_manager.h  focus_graph.cpp  focus_graph.h  focus_manager.h  focus_types.h  hit_test_policy.h  interaction_transaction.cpp  interaction_transaction.h  message_router.h
public-checkout/windows/src/rendering/: governance_types.h  observable_context.h  orchestration_invariants.h  policy_explanation.h  renderer_health.h  renderer_manager.h  runtime_policy.h  system_pressure_monitor.h  visibility_state.h  workload_profile.h  workload_traits.h
public-checkout/windows/src/testing/: api_misuse_validator.h  drift_detector.h  fault_domain_validator.cpp  invariant_checker.h  operational_battlefield_validator.cpp  operational_battlefield_validator.h  performance_budget.h  performance_envelope.cpp  performance_envelope.h  persistence_warfare_validator.h  render_resize_storm.h  replay_system.h  runtime_drift_validator.cpp  runtime_drift_validator.h  runtime_warfare_validator.h  session_battlefield_validator.cpp  session_battlefield_validator.h  soak_harness.h  soak_test.h  stress_harness.h  sustainability_benchmark.h  temporal_validator.h  virtual_display.h
public-checkout/windows/test/: morphic_plugin_test.cpp
runtime_assets/: manifest.json  manifest_spatial.json
runtime_assets/windows/: runner_main_morphic.cpp
runtime_assets/windows/runner_morphic/: churn_harness.cpp  churn_harness.h  forensic_trace.h  frame_clock.h  interaction_router.cpp  morphic_runtime.cpp  morphic_runtime.h  runtime_events.cpp  surface_lifecycle_relay.h  surface_manager.cpp  surface_shell.h  window_topology.cpp  window_topology.h
test/integrator/: bundled_assets_test.dart
test/integrator/cli/: doctor_test.dart  init_remove_test.dart
test/integrator/core/: install_engine_test.dart  transforms_test.dart
tool/: gen_manifest.dart
tools/: capture_notes.ps1  compose_hero.ps1
windows/: morphic_plugin.cpp  morphic_plugin_c_api.cpp
windows/include/morphic/: morphic_api.h  (+1 more)
(+208 files in other folders)
